--- a/view/css/style.css
+++ b/view/css/style.css
@@ -67,21 +67,23 @@
 .logo{
     margin-top: 40px;
 }
-header .logo{
+
+.logo{
     font-size: 35px;
     color:#0070C0;
     font-family:Broadway; 
+    margin-bottom: 30px;
 }
-header .logo span{
+.logo span{
     font-size: 60px;
     color:#07cb79;
 }
 
-.menu_button{
+/*.menu_button{
     background-color: white;
     text-align: center;
    border:none;
-}
+}*/
 
 *{
     word-wrap: break-word;
@@ -416,9 +418,9 @@ a:focus{
 }
 
 /* mahrin modify  */
-.header ul li{
-/*    float: right;*/
-/*    list-style: none;*/
+/*.header ul li{
+    float: right;
+    list-style: none;
     padding: 17px 20px;
     border-bottom: 6px solid transparent;
     font-size: 15px;
@@ -426,16 +428,16 @@ a:focus{
 }
 
 .header ul li{
-/*    float: right;
-    list-style: none;*/
+    float: right;
+    list-style: none;
     padding: 14px 20px;
     border-bottom: 6px solid transparent;
     font-size: 15px;
 
 }
 .header ul li ul li{
-/*    float: right;
-    list-style: none;*/
+    float: right;
+    list-style: none;
     padding: 0px 20px;
     padding-bottom: 15px;
     border-bottom: 6px solid transparent;
@@ -452,7 +454,7 @@ a:focus{
 .header ul li:hover a{
     text-decoration: none;
     color:#07cb79;
-}
+}*/
 
 /*.header .dropdown-menu li{
     padding-left: 0px !important;
