--- a/view/css/menu_mul.css
+++ b/view/css/menu_mul.css
@@ -41,6 +41,12 @@ a {text-decoration: none;}
     font-size:20px;
 }
 
+.nav li:hover,.nav li a:hover{
+    background-color: white;
+    color:#07cb79 !important;
+  
+}
+
 
 .nav:before,
 .nav:after {
@@ -63,12 +69,14 @@ a {text-decoration: none;}
     position: relative;
     padding: 0px 10px;
 }
+
+
 .nav > li {
     float: left;
     /*    border-top: 1px solid #104336;*/
 }
 .nav > li > .parent {
-    background-image: url("http://webdesigntutsplus.s3.amazonaws.com/tuts/378_tessa/tessa-lt-dropdowns-21c7868/images/downArrow.png");
+/*    background-image: url("http://webdesigntutsplus.s3.amazonaws.com/tuts/378_tessa/tessa-lt-dropdowns-21c7868/images/downArrow.png");*/
     background-repeat: no-repeat;
     background-position: right;
 }
